# clipboard-manager-qt-

./: .gitignore  CMakeLists.txt  animationmanager.cpp  animationmanager.h  autostartmanager.h  mainwindow.cpp  mainwindow.h  readme.md  resources.qrc
components/: animationmanager.cpp  animationmanager.h  autostartmanager.cpp  autostartmanager.h  downloadmanager.cpp  downloadmanager.h  storagemanager.cpp  storagemanager.h
components/ui/: customdialog.cpp  customdialog.h
main/: main.cpp  mainwindow.cpp  mainwindow.h
